k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forca-backend
  namespace: forca-production
  labels:
    app: forca-backend
spec:
  replicas: 2 # Alta disponibilidade
  selector:
    matchLabels:
      app: forca-backend
  template:
    metadata:
      labels:
        app: forca-backend
    spec:
      containers:
      - name: backend
        image: cacatuasaquaticas/forca-backend:latest # Imagem que viria do Docker Hub/Registry
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: forca-backend-svc
  namespace: forca-production
spec:
  type: ClusterIP # Backend apenas acessível de dentro do cluster
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: forca-backend
